优化表格开关，无权限的退化为list；

--- a/app/admin/view/mall/cate/index.html
+++ b/app/admin/view/mall/cate/index.html
@@ -4,6 +4,7 @@
                data-auth-add="{:auth('mall.cate/add')}"
                data-auth-edit="{:auth('mall.cate/edit')}"
                data-auth-delete="{:auth('mall.cate/delete')}"
+               data-auth-modify="{:auth('mall.cate/modify')}"
                lay-filter="currentTable">
         </table>
     </div>
