--- a/app/admin/view/system/admin/index.html
+++ b/app/admin/view/system/admin/index.html
@@ -5,6 +5,7 @@
                data-auth-edit="{:auth('system.admin/edit')}"
                data-auth-delete="{:auth('system.admin/delete')}"
                data-auth-password="{:auth('system.admin/password')}"
+               data-auth-modify="{:auth('system.admin/modify')}"
                lay-filter="currentTable">
         </table>
     </div>
