--- a/app/admin/view/system/auth/index.html
+++ b/app/admin/view/system/auth/index.html
@@ -5,6 +5,7 @@
                data-auth-edit="{:auth('system.auth/edit')}"
                data-auth-delete="{:auth('system.auth/delete')}"
                data-auth-authorize="{:auth('system.auth/authorize')}"
+               data-auth-modify="{:auth('system.auth/modify')}"
                lay-filter="currentTable">
         </table>
     </div>
