--- a/app/admin/view/system/menu/index.html
+++ b/app/admin/view/system/menu/index.html
@@ -12,6 +12,7 @@
                data-auth-add="{:auth('system.menu/add')}"
                data-auth-edit="{:auth('system.menu/edit')}"
                data-auth-delete="{:auth('system.menu/delete')}"
+               data-auth-modify="{:auth('system.menu/modify')}"
                lay-filter="currentTable">
         </table>
     </div>
