--- a/app/admin/view/system/node/index.html
+++ b/app/admin/view/system/node/index.html
@@ -3,6 +3,7 @@
         <table id="currentTable" class="layui-table layui-hide"
                data-auth-refresh="{:auth('system.node/refreshNode')}"
                data-auth-clear="{:auth('system.node/clearNode')}"
+               data-auth-modify="{:auth('system.node/modify')}"
                lay-filter="currentTable">
         </table>
     </div>
