--- a/app/admin/view/mall/goods/index.html
+++ b/app/admin/view/mall/goods/index.html
@@ -5,6 +5,7 @@
                data-auth-edit="{:auth('mall.goods/edit')}"
                data-auth-delete="{:auth('mall.goods/delete')}"
                data-auth-stock="{:auth('mall.goods/stock')}"
+               data-auth-modify="{:auth('mall.goods/modify')}"
                lay-filter="currentTable">
         </table>
     </div>
