--- a/app/admin/view/system/quick/index.html
+++ b/app/admin/view/system/quick/index.html
@@ -4,6 +4,7 @@
                data-auth-add="{:auth('system.quick/add')}"
                data-auth-edit="{:auth('system.quick/edit')}"
                data-auth-delete="{:auth('system.quick/delete')}"
+               data-auth-modify="{:auth('system.quick/modify')}"
                lay-filter="currentTable">
         </table>
     </div>
