--- a/public/static/plugs/lay-module/layuimini/layuimini.css
+++ b/public/static/plugs/lay-module/layuimini/layuimini.css
@@ -399,10 +399,11 @@
 
 /**内容主体（通用） */
 .layui-layout-admin .layui-body {
-    overflow  : hidden;
-    bottom    : 0px !important;
-    top       : 60px !important;
-    transition: all .2s;
+    overflow      : hidden;
+    bottom        : 0px !important;
+    top           : 60px !important;
+    transition    : all .2s;
+    padding-bottom: 0;
 }
 
 /**选择配色方案 */
