--- a/app/admin/view/index/welcome.html
+++ b/app/admin/view/index/welcome.html
@@ -144,6 +144,14 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td>Layui版本</td>
+                                    <td>{:\\app\\common\\command\\admin\\Version::LAYUI_VERSION}</td>
+                                </tr>
+                                <tr>
+                                    <td>ThinkPHP</td>
+                                    <td>{:\\think\\App::VERSION}</td>
+                                </tr>
 
                             </tbody>
                         </table>
@@ -152,7 +160,7 @@
                 <div class="layui-card">
                     <div class="layui-card-header"><i class="fa fa-paper-plane-o icon"></i>作者心语</div>
                     <div class="layui-card-body layui-text layadmin-text">
-                        <p>本模板基于layui2.7.4以及font-awesome-4.7.0进行实现。layui开发文档地址：<a class="layui-btn layui-btn-xs layui-btn-danger" target="_blank" href="https://layui.gitee.io/v2/">layui文档</a></p>
+                        <p>本模板基于layui{:\\app\\common\\command\\admin\\Version::LAYUI_VERSION}以及font-awesome-4.7.0进行实现。layui开发文档地址：<a class="layui-btn layui-btn-xs layui-btn-danger" target="_blank" href="https://layui.gitee.io/v2/">layui文档</a></p>
                         <p>技术交流QQ群：<a target="_blank" href="https://jq.qq.com/?_wv=1027&k=TULvsosz"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="layuimini" title="layuimini"></a>（加群请备注来源：如gitee、github、官网等）</p>
                         <p>喜欢此后台模板的可以给我的GitHub和Gitee加个Star支持一下</p>
                         <p class="layui-red">备注：此后台框架永久开源，但请勿进行出售或者上传到任何素材网站，否则将追究相应的责任。</p>
