--- a/view/index/welcome.html
+++ b/view/index/welcome.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="ulthon_admin - 一款基于ThinkPHP6.0和Layui的快速开发的后台管理框架系统">
     <meta name="author" content="ulthon_admin">
-    <meta name="keywords" content="ulthon_admin,ulthon_admin官网,thinkphp6.0框架,layui前端框架,后台快速开发框架,php框架">
+    <meta name="keywords" content="tp6后台,curd后台,layui后台,ulthon_admin,ulthon_admin官网,thinkphp6.0框架,layui前端框架,后台快速开发框架,php框架">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>ulthon_admin | 一款基于ThinkPHP6.0和Layui的快速开发的后台管理框架系统</title>
     <link rel="stylesheet" href="__STATIC__/common/css/welcome.css?v={$version}">
