增加js代码设置

--- a/view/index/welcome.html
+++ b/view/index/welcome.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>ulthon_admin | 一款基于ThinkPHP6.0和Layui的快速开发的后台管理框架系统</title>
     <link rel="stylesheet" href="__STATIC__/common/css/welcome.css?v={$version}">
+
+    {:htmlspecialchars_decode(sysconfig('site','site_js_insert'))}
 </head>
 
 <body>
