--- a/app/admin/view/system/config/site.html
+++ b/app/admin/view/system/config/site.html
@@ -49,7 +49,13 @@
             <tip>填写站点域名。以http://或https://开头,内置的定时任务用到了这个配置项，修改之后需要重启定时任务</tip>
         </div>
     </div>
-
+    <div class="layui-form-item">
+        <label class="layui-form-label">js脚本</label>
+        <div class="layui-input-block">
+            <textarea name="site_js_insert" class="layui-textarea">{:sysconfig('site','site_js_insert')}</textarea>
+            <tip>统计代码等脚本</tip>
+        </div>
+    </div>
     <div class="hr-line"></div>
     <div class="layui-form-item text-center">
         <button type="submit" class="layui-btn layui-btn-normal layui-btn-sm" lay-submit="system.config/save" data-refresh="false">确认</button>
