--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -30,6 +30,9 @@
                 <ul class="layui-nav layui-layout-right">
 
                     <li class="layui-nav-item" lay-unselect>
+                        <a href="/"><i class="fa fa-home"></i></a>
+                    </li>
+                    <li class="layui-nav-item" lay-unselect>
                         <a href="javascript:;" data-refresh="刷新"><i class="fa fa-refresh"></i></a>
                     </li>
                     <li class="layui-nav-item" lay-unselect>
