新增表格valueParser属性;新增复制事件组件；新增表格复制组件

--- a/app/admin/view/index/welcome.html
+++ b/app/admin/view/index/welcome.html
@@ -119,13 +119,13 @@
                             <tbody>
                                 <tr>
                                     <td>框架名称</td>
-                                    <td>
-                                        ulthon_admin
+                                    <td data-toggle="copy-text" data-clipboard-text="ulthon_admin">
+                                        ulthon_admin <i class="fa fa-copy"></i>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>当前版本</td>
-                                    <td>{:\\app\\common\\command\\admin\\Version::VERSION}</td>
+                                    <td data-toggle="copy-text" data-clipboard-text="{:\\app\\common\\command\\admin\\Version::VERSION}">{:\\app\\common\\command\\admin\\Version::VERSION} <i class="fa fa-copy"></i></td>
                                 </tr>
                                 <tr>
                                     <td>最新修改</td>
