--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -650,3 +650,7 @@ table样式
 .city-picker-span.open {
     border-color: #d2d2d2 !important;
 }
+
+[data-toggle="copy-text"].copy-rendered {
+    cursor: pointer;
+}
