增加ua_htmlspecialchars_decode函数兼容PHP8.1

--- a/app/admin/view/mall/goods/read.html
+++ b/app/admin/view/mall/goods/read.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="value">
                         <div class="article-item">
-                            {$row.describe|raw|htmlspecialchars_decode}
+                            {$row.describe|raw|ua_htmlspecialchars_decode}
                         </div>
                     </div>
                 </div>
