增加后台全局状态；增加默认头像

--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -43,8 +43,8 @@
                     </li>
                     <li class="layui-nav-item layuimini-setting">
                         <a href="javascript:;">
-                            <img src="{:session('admin.head_img')}" class="layui-nav-img" width="50" height="50">
-                            <cite class="adminName">{:session('admin.username')}</cite>
+                            <img src="{$session_admin.head_img}" class="layui-nav-img" width="50" height="50">
+                            <cite class="adminName">{$session_admin.username}</cite>
                             <span class="layui-nav-more"></span>
                         </a>
                         <dl class="layui-nav-child">
