--- a/app/admin/view/mall/goods/add.html
+++ b/app/admin/view/mall/goods/add.html
@@ -68,7 +68,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">属性</label>
             <div class="layui-input-block">
-                <div data-toggle="property-input" data-value-field="id" data-name="property">
+                <div data-toggle="property-input" data-name="property">
 
                 </div>
             </div>
