--- a/app/admin/view/mall/goods/edit.html
+++ b/app/admin/view/mall/goods/edit.html
@@ -69,7 +69,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">属性</label>
             <div class="layui-input-block">
-                <div data-toggle="property-input" data-name="property" data-value="{$row.property|raw|default=''}"></div>
+                <div data-toggle="property-input" data-name="property">{$row.property|raw|ua_htmlspecialchars_decode|default=''}</div>
             </div>
         </div>
         <div class="layui-form-item">
