--- a/app/admin/view/mall/goods/add.html
+++ b/app/admin/view/mall/goods/add.html
@@ -79,7 +79,23 @@
                 <textarea name="describe" rows="20" class="layui-textarea editor" placeholder="请输入商品描述"></textarea>
             </div>
         </div>
-
+        <div class="layui-form-item">
+            <label class="layui-form-label">授权文件名称</label>
+            <div class="layui-input-block">
+                <input type="text" name="license_name" class="layui-input" lay-verify="required" placeholder="请输入授权文件名称" value="">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label required">授权文件</label>
+            <div class="layui-input-block layuimini-upload">
+                <input name="license" class="layui-input layui-col-xs6" lay-verify="required"  placeholder="请上传授权文件" value="">
+                <div class="layuimini-upload-btn">
+                    <span><a class="layui-btn" data-upload="license" data-upload-number="one" data-upload-exts="zip" data-upload-icon="file" data-upload-disable-preview="0" data-upload-filename-field="license_name"><i class="fa fa-upload"></i> 上传</a></span>
+                    <span><a class="layui-btn layui-btn-normal" id="select_license" data-upload-select="license" data-upload-number="one" data-upload-mimetype="*" data-upload-filename-field="license_name"><i class="fa fa-list"></i> 选择</a></span>
+                </div>
+            </div>
+        </div>
+        
         <div class="layui-form-item">
             <label class="layui-form-label">分类排序</label>
             <div class="layui-input-block">
