增加media的扩展名分组

--- a/app/admin/view/mall/goods/add.html
+++ b/app/admin/view/mall/goods/add.html
@@ -90,7 +90,7 @@
             <div class="layui-input-block layuimini-upload">
                 <input name="license" class="layui-input layui-col-xs6" lay-verify="required"  placeholder="请上传授权文件" value="">
                 <div class="layuimini-upload-btn">
-                    <span><a class="layui-btn" data-upload="license" data-upload-number="one" data-upload-exts="zip" data-upload-icon="file" data-upload-disable-preview="0" data-upload-filename-field="license_name"><i class="fa fa-upload"></i> 上传</a></span>
+                    <span><a class="layui-btn" data-upload="license" data-upload-number="one" data-upload-exts="*office" data-upload-icon="file" data-upload-disable-preview="0" data-upload-filename-field="license_name"><i class="fa fa-upload"></i> 上传</a></span>
                     <span><a class="layui-btn layui-btn-normal" id="select_license" data-upload-select="license" data-upload-number="one" data-upload-mimetype="*" data-upload-filename-field="license_name"><i class="fa fa-list"></i> 选择</a></span>
                 </div>
             </div>
