--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -1,29 +1,29 @@
-@import url("../../plugs/layui-v2.7.6/css/layui.css");
+@import url("../../plugs/layui-v2.8.0/css/layui.css");
 @import url("../../plugs/font-awesome-4.7.0/css/font-awesome.min.css");
 @import url("../css/iconfont.css");
 @import url('../../plugs/jq-module/city-picker/css/city-picker.css');
 
 html,
 body {
-    height    : 100%;
+    height: 100%;
     background: #f2f2f2;
 }
 
 .layuimini-container {
-    min-height   : 250px;
-    padding      : 15px;
-    margin-right : auto;
-    margin-left  : auto;
-    padding-left : 15px;
+    min-height: 250px;
+    padding: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
     padding-right: 15px;
 }
 
 .layuimini-main {
-    position        : relative;
-    padding         : 15px 15px;
+    position: relative;
+    padding: 15px 15px;
     background-color: #ffffff;
-    border          : 1px solid #f2f2f2;
-    border-radius   : 5px;
+    border: 1px solid #f2f2f2;
+    border-radius: 5px;
 }
 
 .text-center {
@@ -35,8 +35,8 @@ body {
 }
 
 .layuimini-form .layui-form-item {
-    position   : relative;
-    padding    : 0 60px 0 0;
+    position: relative;
+    padding: 0 60px 0 0;
     line-height: 24px;
 }
 
@@ -62,29 +62,29 @@ body {
 
 .easy-bg-white {
     background-color: #ffffff;
-    height          : auto;
+    height: auto;
 }
 
 .hr-line {
-    color           : #fff;
-    height          : 1px;
-    margin          : 30px 0;
+    color: #fff;
+    height: 1px;
+    margin: 30px 0;
     background-color: #fff;
-    border-top      : 1px dashed #e7eaec;
+    border-top: 1px dashed #e7eaec;
 }
 
 /**重写layui表格自适应*/
 .layuimini-container .layui-table-cell {
-    height   : 100%;
+    height: 100%;
     max-width: 100%;
 }
 
 /**数据表格-搜索表单样式*/
 .layuimini-container .table-search-fieldset {
-    margin : 0;
-    border : 1px solid #e6e6e6;
+    margin: 0;
+    border: 1px solid #e6e6e6;
     padding: 10px 20px 5px 20px;
-    color  : #6b6b6b;
+    color: #6b6b6b;
 }
 
 .layuimini-container .table-search-fieldset input::-webkit-input-placeholder {
@@ -106,30 +106,30 @@ body {
 
 /**必填红点 */
 .layuimini-form>.layui-form-item .required:after {
-    content    : '*';
-    color      : red;
-    position   : absolute;
+    content: '*';
+    color: red;
+    position: absolute;
     margin-left: 4px;
     font-weight: bold;
     line-height: 1.8em;
-    top        : 6px;
-    right      : 5px;
+    top: 6px;
+    right: 5px;
 }
 
 /*.layuimini-form>.layui-form-item>.layui-form-label {width:120px !important;}*/
 /*.layuimini-form>.layui-form-item>.layui-input-block {margin-left:150px !important;}*/
 .layuimini-form>.layui-form-item>.layui-input-block tip,
 .layuimini-form>.layui-form-item>.layui-inline tip {
-    display    : inline-block;
-    margin-top : 10px;
+    display: inline-block;
+    margin-top: 10px;
     line-height: 15px;
-    font-size  : 10px;
-    color      : #a29c9c;
+    font-size: 10px;
+    color: #a29c9c;
 }
 
 /** 按钮背景色 */
 .layuimini-container .layuimini-btn-primary {
-    color           : #fff;
+    color: #fff;
     background-color: #2c3e50;
 }
 
@@ -143,34 +143,34 @@ body {
 }
 
 .layuimini-upload .layuimini-upload-btn {
-    display         : inline-block;
-    position        : absolute;
-    right           : 0px;
+    display: inline-block;
+    position: absolute;
+    right: 0px;
     background-color: #fff;
 }
 
 .layuimini-upload-show {
-    margin-top   : 10px;
+    margin-top: 10px;
     margin-bottom: 0;
 }
 
 .layuimini-upload-show li {
-    position     : relative;
-    display      : inline-block;
-    padding      : 5px 0 5px 0;
-    padding-left : 10px;
+    position: relative;
+    display: inline-block;
+    padding: 5px 0 5px 0;
+    padding-left: 10px;
     padding-right: 10px;
-    border       : 1px solid #e2e2e2;
+    border: 1px solid #e2e2e2;
 }
 
 .layuimini-upload-show a img {
-    height    : 80px;
+    height: 80px;
     object-fit: cover;
 }
 
 .layuimini-upload-show .uploads-delete-tip {
-    position : absolute;
-    right    : 10px;
+    position: absolute;
+    right: 10px;
     font-size: 12px;
 }
 
@@ -183,18 +183,18 @@ body {
 }
 
 .badge {
-    display         : inline-block;
-    min-width       : 10px;
-    padding         : 3px 7px;
-    font-size       : 11px;
-    font-weight     : bold;
-    color           : #fff;
-    line-height     : 1;
-    vertical-align  : middle;
-    white-space     : nowrap;
-    text-align      : center;
+    display: inline-block;
+    min-width: 10px;
+    padding: 3px 7px;
+    font-size: 11px;
+    font-weight: bold;
+    color: #fff;
+    line-height: 1;
+    vertical-align: middle;
+    white-space: nowrap;
+    text-align: center;
     background-color: #777777;
-    border-radius   : 10px;
+    border-radius: 10px;
 }
 
 /**vue隐藏样式*/
@@ -205,18 +205,18 @@ body {
 /**表格url样式*/
 .layuimini-table-url {
     background-color: #1497f3;
-    color           : #ffffff;
-    border-radius   : 3px;
-    size            : 8px !important;
-    padding         : 2px
+    color: #ffffff;
+    border-radius: 3px;
+    size: 8px !important;
+    padding: 2px
 }
 
 .layuimini-table-url:hover {
     background-color: #1497f3;
-    color           : #ffffff;
-    border-radius   : 3px;
-    size            : 8px !important;
-    padding         : 2px
+    color: #ffffff;
+    border-radius: 3px;
+    size: 8px !important;
+    padding: 2px
 }
 
 /**后台权限隐藏*/
@@ -228,21 +228,21 @@ body {
 
 .layui-input-block {
     margin-left: 130px;
-    min-height : 36px
+    min-height: 36px
 }
 
 /**
 table样式
  */
 .layuimini-container .layui-laypage .layui-laypage-curr .layui-laypage-em {
-    border-radius   : 30px !important;
+    border-radius: 30px !important;
     background-color: #1e9fff !important;
 }
 
 .layuimini-container .layui-table-tool {
     background-color: #ffffff;
-    border-bottom   : none !important;
-    padding-bottom  : 15px !important;
+    border-bottom: none !important;
+    padding-bottom: 15px !important;
 }
 
 .layuimini-container .layui-table-view {
@@ -262,22 +262,22 @@ table样式
 
 .layuimini-container .layui-table-box .layui-table-header th {
     font-weight: bold !important;
-    color      : #565656 !important;
+    color: #565656 !important;
 }
 
 /**
 搜索
  */
 .form-search .layui-btn {
-    height     : 32px;
+    height: 32px;
     line-height: 28px;
-    font-size  : 12px;
-    padding    : 0 10px;
+    font-size: 12px;
+    padding: 0 10px;
 }
 
 .form-search .layui-form-label {
-    padding    : 0 8px;
-    height     : 32px;
+    padding: 0 8px;
+    height: 32px;
     line-height: 30px;
 }
 
@@ -287,15 +287,15 @@ table样式
 
 .form-search .layui-input-inline input,
 .form-search .layui-input-inline select {
-    width      : 100%;
-    height     : 32px;
-    padding    : 2px 8px;
+    width: 100%;
+    height: 32px;
+    padding: 2px 8px;
     line-height: 1em;
-    font-size  : 12px;
+    font-size: 12px;
 }
 
 .form-search .layui-form-select dl {
-    top    : 31px;
+    top: 31px;
     padding: 0;
 }
 
@@ -304,15 +304,15 @@ table样式
 按钮
  */
 .layuimini-container .layui-btn-success {
-    color           : #fff;
+    color: #fff;
     background-color: #4bb368;
-    border-color    : #4bb368;
+    border-color: #4bb368;
 }
 
 .layuimini-container .layui-btn-danger {
-    color           : #fff;
+    color: #fff;
     background-color: #f56c6c;
-    border-color    : #f56c6c;
+    border-color: #f56c6c;
 }
 
 .layuimini-container .layui-table-tool .layui-btn+.layui-btn {
@@ -320,10 +320,10 @@ table样式
 }
 
 .layuimini-container .layui-table-tool .layui-inline[lay-event] {
-    width      : 30px;
-    height     : 30px;
+    width: 30px;
+    height: 30px;
     line-height: 30px;
-    padding    : 0px;
+    padding: 0px;
 }
 
 .layuimini-container .layui-table-tool .layui-inline .layui-icon {
@@ -342,7 +342,7 @@ table样式
 开关
  */
 .layuimini-container .layui-form-switch {
-    border          : 1px solid #f56d6d;
+    border: 1px solid #f56d6d;
     background-color: #f56d6d;
 }
 
@@ -355,7 +355,7 @@ table样式
 }
 
 .layuimini-container .layui-form-onswitch {
-    border-color    : #1f9fff;
+    border-color: #1f9fff;
     background-color: #1f9fff;
 }
 
@@ -364,30 +364,26 @@ table样式
  */
 .layuimini-container .layui-form-select dl dd.layui-this {
     background-color: #1e9fff !important;
+    color: #fff;
 }
 
 /**
 弹出层样式
  */
 .layui-layer-easy .layui-layer-title {
-    background   : #2c3e50 !important;
-    color        : #fff !important;
+    background: #2c3e50 !important;
+    color: #fff !important;
     border-bottom: none;
 }
 
-.layui-layer-easy .layui-layer-title~.layui-layer-setwin {
-    top   : 0px;
-    height: 42px;
-}
-
 .layui-layer-easy .layui-layer-title~.layui-layer-setwin>a {
-    height     : 42px;
+    height: 42px;
     line-height: 42px;
-    display    : inline-block;
+    display: inline-block;
 }
 
 .layui-layer-easy.layui-layer-border {
-    border    : none !important;
+    border: none !important;
     box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.3) !important;
 }
 
@@ -397,36 +393,40 @@ table样式
 
 .layui-layer-easy .layui-layer-moves {
     -webkit-box-sizing: content-box;
-    -moz-box-sizing   : content-box;
-    box-sizing        : content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
 }
 
 .layui-layer-easy .layui-layer-btn {
     text-align: center !important;
-    padding   : 10px !important;
+    padding: 10px !important;
     background: #ecf0f1;
-    overflow  : hidden;
+    overflow: hidden;
 }
 
 .layui-layer-easy .layui-layer-btn a {
     background-color: #95a5a6;
-    border-color    : #95a5a6;
-    color           : #fff !important;
-    height          : 31px;
-    margin-top      : 0;
-    border          : 1px solid transparent;
+    border-color: #95a5a6;
+    color: #fff !important;
+    height: 31px;
+    margin-top: 0;
+    border: 1px solid transparent;
 }
 
 .layui-layer-easy .layui-layer-btn .layui-layer-btn0 {
     background-color: #1E9FFF;
-    border-color    : #1E9FFF;
+    border-color: #1E9FFF;
 }
 
 .layui-layer-easy .layui-layer-footer {
-    padding         : 8px 20px;
+    padding: 8px 20px;
     background-color: #ecf0f1;
-    height          : auto;
-    text-align      : inherit !important;
+    height: auto;
+    text-align: inherit !important;
+}
+
+.layui-layer-easy .layui-layer-setwin>span {
+    color: #fff;
 }
 
 .layui-layer-easy .layui-layer-setwin>a {
@@ -438,65 +438,34 @@ table样式
 }
 
 .layui-layer-easy .layui-layer-setwin>a:after {
-    content        : "\e625";
-    font-family    : iconfont;
-    font-style     : normal;
-    font-weight    : normal;
+    content: "\e625";
+    font-family: iconfont;
+    font-style: normal;
+    font-weight: normal;
     text-decoration: inherit;
-    position       : absolute;
-    font-size      : 18px;
-    color          : #fff;
-    margin         : 0;
-    z-index        : 1;
+    position: absolute;
+    font-size: 18px;
+    color: #fff;
+    margin: 0;
+    z-index: 1;
 }
 
 .layui-layer-easy .layui-layer-setwin>a:hover {
     text-decoration: none !important;
-    background     : none !important;
+    background: none !important;
 }
 
 .layui-layer-easy .layui-layer-setwin>a:focus {
     text-decoration: none !important;
 }
 
-.layui-layer-easy .layui-layer-setwin .layui-layer-min {
-    display: none;
+.layui-layer-easy .layui-layer-setwin .layui-layer-max::after,
+.layui-layer-easy .layui-layer-setwin .layui-layer-max::before {
+    border-color: #fff;
 }
 
-.layui-layer-easy .layui-layer-setwin .layui-layer-min:after {
-    content: "\e625";
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-max {
-    display: none;
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-max:after {
-    content: "\e623";
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-maxmin {
-    display: none;
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-maxmin:after {
-    content: "\e624";
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-close1:after {
-    content: "\e626";
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-close2,
-.layui-layer-easy .layui-layer-setwin .layui-layer-close2:hover {
-    background: url('../libs/layer/dist/theme/default/icon.png') no-repeat -149px -31px !important;
-    top       : -30px;
-    right     : -30px;
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-close2:after,
-.layui-layer-easy .layui-layer-setwin .layui-layer-close2:hover:after {
-    display: none;
+.layui-layer-easy .layui-layer-setwin .layui-layer-min::before {
+    background-color: #fff;
 }
 
 .layui-layer-content {
@@ -512,14 +481,14 @@ table样式
 }
 
 .layui-layer-easy-tab .layui-layer-content .layui-layer-tabmain {
-    margin : 0;
+    margin: 0;
     padding: 0;
 }
 
 @media screen and (max-width: 1024px) {
     .layuimini-form .layui-form-item {
-        position   : relative;
-        padding    : 0 30px 0 0;
+        position: relative;
+        padding: 0 30px 0 0;
         line-height: 24px;
     }
 }
@@ -538,15 +507,15 @@ table样式
 }
 
 .line-limit-length {
-    width        : 200px;
-    overflow     : hidden;
+    width: 200px;
+    overflow: hidden;
     text-overflow: ellipsis;
-    background   : goldenrod;
-    white-space  : nowrap;
+    background: goldenrod;
+    white-space: nowrap;
 }
 
 .data-item {
-    display    : none;
+    display: none;
     line-height: 28px;
 }
 
@@ -556,14 +525,14 @@ table样式
     }
 
     .layui-form-item .layui-form-label {
-        float     : unset;
+        float: unset;
         text-align: left;
 
     }
 
     .layuimini-form>.layui-form-item .required:after {
-        right      : unset;
-        left       : 0;
+        right: unset;
+        left: 0;
         margin-left: 0;
     }
 
@@ -573,8 +542,8 @@ table样式
 
     .layui-anim-upbit {
         min-width: unset !important;
-        width    : calc(100% - 20px);
-        overflow : auto
+        width: calc(100% - 20px);
+        overflow: auto
     }
 
     .layui-table-page {
@@ -592,10 +561,10 @@ table样式
 
     .layui-table-main .layui-table tr {
         background-color: #eee;
-        border-radius   : 15px;
-        padding         : 15px;
-        margin-bottom   : 15px;
-        display         : block;
+        border-radius: 15px;
+        padding: 15px;
+        margin-bottom: 15px;
+        display: block;
     }
 
 
@@ -608,18 +577,18 @@ table样式
     }
 
     .layui-table-main td {
-        display        : flex;
-        align-items    : flex-start;
+        display: flex;
+        align-items: flex-start;
         justify-content: space-between;
-        margin-right   : 0;
-        border-bottom  : 1px solid #fff;
-        min-height     : 30px;
+        margin-right: 0;
+        border-bottom: 1px solid #fff;
+        min-height: 30px;
     }
 
 
     .layui-table-main .layui-table-cell {
-        width     : auto;
-        padding   : 0;
+        width: auto;
+        padding: 0;
         text-align: right;
     }
 
@@ -639,7 +608,7 @@ table样式
 
 .form-item-time-limit .layui-input-inline {
     display: flex;
-    width  : 274px;
+    width: 274px;
 }
 
 .form-item-number-limit .layui-input-inline {
@@ -649,13 +618,13 @@ table样式
 /* 重写地区选择器的样式 */
 
 .city-picker-span {
-    height          : 38px;
-    border-width    : 1px;
-    border-style    : solid;
+    height: 38px;
+    border-width: 1px;
+    border-style: solid;
     background-color: #fff;
-    color           : rgba(0, 0, 0, .85);
-    border-radius   : 2px;
-    border-color    : #eee;
+    color: rgba(0, 0, 0, .85);
+    border-radius: 2px;
+    border-color: #eee;
 }
 
 .city-picker-span:hover {
