--- a/public/static/common/css/theme/_win7.scss
+++ b/public/static/common/css/theme/_win7.scss
@@ -1,19 +1,19 @@
 & {
-    color           : #222;
+    color: #222;
     background-color: #f0f0f0;
 }
 
 .layui-btn {
-    background   : linear-gradient(180deg, #eee 45%, #ddd 0, #bbb);
-    border       : 1.5px solid #888;
+    background: linear-gradient(180deg, #eee 45%, #ddd 0, #bbb);
+    border: 1.5px solid #888;
     border-radius: 3px;
-    box-shadow   : inset 0 -1px 1px hsla(0, 0%, 100%, .8), inset 0 1px 1px #fff;
-    box-sizing   : border-box;
-    color        : #222;
+    box-shadow: inset 0 -1px 1px hsla(0, 0%, 100%, .8), inset 0 1px 1px #fff;
+    box-sizing: border-box;
+    color: #222;
 
 
     &:hover {
-        background  : linear-gradient(180deg, #e5f4fd 45%, #b3e0f9 0);
+        background: linear-gradient(180deg, #e5f4fd 45%, #b3e0f9 0);
         border-color: #72a2c5;
     }
 }
@@ -22,28 +22,28 @@
     @extend .layui-btn;
     color: #222 !important;
 
-    height     : 26px;
+    height: 26px;
     line-height: 26px;
-    font-size  : 12px;
+    font-size: 12px;
 }
 
 .layui-layer-title {
-    background      : linear-gradient(90deg, hsla(0, 0%, 100%, .4), rgba(0, 0, 0, .1), hsla(0, 0%, 100%, .2)), linear-gradient(55deg, transparent, rgba(0, 0, 0, .1) 20%, rgba(0, 0, 0, .1) 50%, transparent 53%), #4580c4 !important;
-    border          : 1px solid rgba(0, 0, 0, .6);
-    border-radius   : 6px 6px 0 0;
+    background: linear-gradient(90deg, hsla(0, 0%, 100%, .4), rgba(0, 0, 0, .1), hsla(0, 0%, 100%, .2)), linear-gradient(55deg, transparent, rgba(0, 0, 0, .1) 20%, rgba(0, 0, 0, .1) 50%, transparent 53%), #4580c4 !important;
+    border: 1px solid rgba(0, 0, 0, .6);
+    border-radius: 6px 6px 0 0;
     // box-shadow   : inset 0 0 .5px .5px #fff;
 
-    height     : 27px;
+    height: 27px;
     line-height: 27px;
 
-    color         : #000 !important;
+    color: #000 !important;
     letter-spacing: 0;
-    font-size     : 12px;
-    text-shadow   : 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff;
+    font-size: 12px;
+    text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff;
 
     padding: 0 80px 0 8px;
 
-    border    : 0;
+    border: 0;
     box-shadow: inset 0 .5px #fff;
 
 
@@ -51,27 +51,27 @@
 
 .layui-layer-easy .layui-layer-title~.layui-layer-setwin {
     height: 27px !important;
-    top   : 1px;
+    top: 1px;
 }
 
 .layui-layer-easy .layui-layer-title~.layui-layer-setwin>a {
-    height     : 20px !important;
+    height: 20px !important;
     line-height: 20px !important;
 
-    background                : linear-gradient(hsla(0, 0%, 100%, .3), hsla(0, 0%, 100%, .3) 45%, rgba(0, 0, 0, .1) 50%, rgba(0, 0, 0, .1) 75%, hsla(0, 0%, 100%, .5)) !important;
-    border                    : 0;
-    border-radius             : 0;
+    background: linear-gradient(hsla(0, 0%, 100%, .3), hsla(0, 0%, 100%, .3) 45%, rgba(0, 0, 0, .1) 50%, rgba(0, 0, 0, .1) 75%, hsla(0, 0%, 100%, .5)) !important;
+    border: 0;
+    border-radius: 0;
     border-bottom-right-radius: 0px;
-    border-right              : 1px solid rgba(0, 0, 0, .6);
-    box-shadow                : inset 0 0 0 .5px #eee;
-    box-sizing                : border-box;
+    border-right: 1px solid rgba(0, 0, 0, .6);
+    box-shadow: inset 0 0 0 .5px #eee;
+    box-sizing: border-box;
 
-    padding : 0;
+    padding: 0;
     position: relative;
 
     margin-left: 0;
 
-    min-width : 26px;
+    min-width: 26px;
     text-align: center;
 
     &::after {
@@ -84,7 +84,7 @@
 
 
     &:last-child {
-        border                    : 0;
+        border: 0;
         border-bottom-right-radius: 5px;
 
     }
@@ -95,11 +95,11 @@
 
     &.layui-layer-close1 {
         background-color: #d04a37 !important;
-        min-width       : 45px !important;
+        min-width: 45px !important;
 
 
         &:hover {
-            filter          : contrast(1.3);
+            filter: contrast(1.3);
             background-image: linear-gradient(hsla(0, 0%, 100%, .3), hsla(0, 0%, 100%, .3) 45%, rgba(0, 0, 0, .1) 50%, rgba(0, 0, 0, .1) 75%, hsla(0, 0%, 100%, .5)) !important;
         }
     }
@@ -117,22 +117,22 @@
 .layui-layer:not(.layui-layer-loading) {
 
     .layui-layer-content {
-        background         : #f0f0f0;
-        border             : 1px solid rgba(0, 0, 0, .6);
-        box-shadow         : 0 -1px 1px .5px #fff;
-        margin             : 0 6px 0 6px;
-        padding            : 6px;
+        background: #f0f0f0;
+        border: 1px solid rgba(0, 0, 0, .6);
+        box-shadow: 0 -1px 1px .5px #fff;
+        margin: 0 6px 0 6px;
+        padding: 6px;
         border-bottom-width: 0;
     }
 
     &::before {
-        background   : linear-gradient(transparent 20%, hsla(0, 0%, 100%, .7) 40%, transparent 41%), linear-gradient(90deg, hsla(0, 0%, 100%, .4), rgba(0, 0, 0, .1), hsla(0, 0%, 100%, .2)), linear-gradient(55deg, transparent, rgba(0, 0, 0, .1) 20%, rgba(0, 0, 0, .1) 50%, transparent 53%), #4580c4;
+        background: linear-gradient(transparent 20%, hsla(0, 0%, 100%, .7) 40%, transparent 41%), linear-gradient(90deg, hsla(0, 0%, 100%, .4), rgba(0, 0, 0, .1), hsla(0, 0%, 100%, .2)), linear-gradient(55deg, transparent, rgba(0, 0, 0, .1) 20%, rgba(0, 0, 0, .1) 50%, transparent 53%), #4580c4;
         border-radius: 6px;
-        content      : "";
-        height       : 100%;
-        position     : absolute;
-        width        : 100%;
-        z-index      : -1;
+        content: "";
+        height: 100%;
+        position: absolute;
+        width: 100%;
+        z-index: -1;
 
     }
 
@@ -146,58 +146,58 @@
 
 .layui-layer-easy .layui-layer-btn {
     background: #f0f0f0;
-    border    : 1px solid rgba(0, 0, 0, .6);
+    border: 1px solid rgba(0, 0, 0, .6);
     box-shadow: 0 0 1px .5px #fff;
-    margin    : 0 6px 6px;
-    padding   : 6px;
+    margin: 0 6px 6px;
+    padding: 6px;
     border-top: 0;
     text-align: right !important;
 }
 
 .layui-card {
 
-    border       : 1px solid rgba(0, 0, 0, .6);
+    border: 1px solid rgba(0, 0, 0, .6);
     border-radius: 6px;
-    box-shadow   : 0 0 5px 1px rgba(0, 0, 0, .6);
-    font         : 9pt Segoe UI, sans-serif;
-    position     : relative;
-    z-index      : 0;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, .6);
+    font: 9pt Segoe UI, sans-serif;
+    position: relative;
+    z-index: 0;
 
     &::before {
-        background   : linear-gradient(transparent 20%, hsla(0, 0%, 100%, .7) 40%, transparent 41%), linear-gradient(90deg, hsla(0, 0%, 100%, .4), rgba(0, 0, 0, .1), hsla(0, 0%, 100%, .2)), linear-gradient(55deg, transparent, rgba(0, 0, 0, .1) 20%, rgba(0, 0, 0, .1) 50%, transparent 53%), #4580c4;
+        background: linear-gradient(transparent 20%, hsla(0, 0%, 100%, .7) 40%, transparent 41%), linear-gradient(90deg, hsla(0, 0%, 100%, .4), rgba(0, 0, 0, .1), hsla(0, 0%, 100%, .2)), linear-gradient(55deg, transparent, rgba(0, 0, 0, .1) 20%, rgba(0, 0, 0, .1) 50%, transparent 53%), #4580c4;
         border-radius: 6px;
-        content      : "";
-        height       : 100%;
-        position     : absolute;
-        width        : 100%;
-        z-index      : -1;
+        content: "";
+        height: 100%;
+        position: absolute;
+        width: 100%;
+        z-index: -1;
     }
 
 
     .layui-card-header {
-        align-items    : center;
-        background     : linear-gradient(90deg, hsla(0, 0%, 100%, .4), rgba(0, 0, 0, .1), hsla(0, 0%, 100%, .2)), linear-gradient(55deg, transparent, rgba(0, 0, 0, .1) 20%, rgba(0, 0, 0, .1) 50%, transparent 53%), #4580c4;
-        border-radius  : 6px 6px 0 0;
-        font           : 9pt Segoe UI, sans-serif;
+        align-items: center;
+        background: linear-gradient(90deg, hsla(0, 0%, 100%, .4), rgba(0, 0, 0, .1), hsla(0, 0%, 100%, .2)), linear-gradient(55deg, transparent, rgba(0, 0, 0, .1) 20%, rgba(0, 0, 0, .1) 50%, transparent 53%), #4580c4;
+        border-radius: 6px 6px 0 0;
+        font: 9pt Segoe UI, sans-serif;
         justify-content: space-between;
-        padding        : 6px;
-        border         : 0;
-        box-shadow     : inset 0 .5px #fff;
-        height         : 15px;
+        padding: 6px;
+        border: 0;
+        box-shadow: inset 0 .5px #fff;
+        height: 15px;
 
-        color         : #000;
+        color: #000;
         letter-spacing: 0;
-        line-height   : 15px;
-        text-shadow   : 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff;
+        line-height: 15px;
+        text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff;
 
     }
 
     .layui-card-body {
         background: #f0f0f0;
-        border    : 1px solid rgba(0, 0, 0, .6);
+        border: 1px solid rgba(0, 0, 0, .6);
         box-shadow: 0 0 1px .5px #fff;
-        margin    : 0 6px 6px;
-        padding   : 6px;
+        margin: 0 6px 6px;
+        padding: 6px;
     }
 }
 
@@ -208,30 +208,28 @@
 }
 
 .layuimini-tab .layui-tab-control>li {
-    height     : 27px !important;
+    height: 27px !important;
     line-height: 27px !important;
 }
 
 .layui-form-checkbox[lay-skin="primary"] i {
-    background  : #ddd;
-    border      : 1px solid #888;
-    box-shadow  : inset 0 0 0 1.5px #eee, inset 0 2px 4px #888, inset -2px -3px 4px #fff;
-    box-sizing  : border-box;
-    content     : "";
-    display     : inline-block;
-    height      : 13px;
+    background: #ddd;
+    border: 1px solid #888;
+    box-shadow: inset 0 0 0 1.5px #eee, inset 0 2px 4px #888, inset -2px -3px 4px #fff;
+    box-sizing: border-box;
+    content: "";
+    display: inline-block;
+    height: 13px;
     margin-right: 6px;
-    width       : 13px;
-    color       : transparent;
+    width: 13px;
+    color: transparent;
 }
 
 .layui-form-checked[lay-skin="primary"] i {
     color: #16638f;
-
-    display    : block;
+    border-color: #888;
+    display: block;
     font-weight: 700;
-
-
     position: absolute;
 
     &::before {
@@ -248,13 +246,13 @@
 
 .layui-input {
     background-color: #fff;
-    border          : 1px solid #ccc;
+    border: 1px solid #ccc;
     border-top-color: rgb(204, 204, 204);
-    border-radius   : 2px;
+    border-radius: 2px;
     border-top-color: #888;
-    box-sizing      : border-box;
-    font            : 9pt Segoe UI, sans-serif;
-    padding         : 3px 4px 5px;
+    box-sizing: border-box;
+    font: 9pt Segoe UI, sans-serif;
+    padding: 3px 4px 5px;
 }
 
 .layui-input,
@@ -265,7 +263,7 @@
 
 .layui-form-label {
     padding: 3px 15px;
-    font   : 9pt Segoe UI, sans-serif;
+    font: 9pt Segoe UI, sans-serif;
 }
 
 
@@ -275,20 +273,20 @@
 
 .form-search .layui-input-inline input,
 .form-search .layui-input-inline select {
-    height     : unset;
+    height: unset;
     line-height: unset;
 }
 
 .form-search .layui-form-label {
-    height    : unset;
+    height: unset;
     background: unset;
     text-align: right;
-    border    : unset;
+    border: unset;
 }
 
 .layuimini-upload-btn {
     .layui-btn {
-        height     : 25px;
+        height: 25px;
         line-height: 25px;
     }
 }
