修复皮肤切换的背景色丢失

--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -643,3 +643,7 @@ table样式
 [data-toggle="copy-text"].copy-rendered {
     cursor: pointer;
 }
+
+#layuimini-bg-color {
+    background-color: #fff;
+}
