--- a/public/static/common/css/theme/index.css
+++ b/public/static/common/css/theme/index.css
@@ -1374,6 +1374,7 @@
   background: unset !important;
   color: #212529 !important;
   font-size: 16px;
+  border-bottom: 1px solid #f0f0f0;
 }
 .elem-style-nes .layui-layer-easy .layui-layer-btn {
   background: unset !important;
@@ -1394,8 +1395,18 @@
 .elem-style-nes .layui-layer-dialog .layui-layer-content {
   font-size: 16px;
 }
-.elem-style-nes .layui-layer-easy .layui-layer-setwin > a:after {
+.elem-style-nes .layui-layer-easy .layui-layer-setwin > span {
   color: #212529;
+}
+.elem-style-nes .layui-layer-easy .layui-layer-setwin > span:after {
+  color: #212529;
+}
+.elem-style-nes .layui-layer-easy .layui-layer-setwin .layui-layer-max::after,
+.elem-style-nes .layui-layer-easy .layui-layer-setwin .layui-layer-max::before {
+  border-color: #212529;
+}
+.elem-style-nes .layui-layer-easy .layui-layer-setwin .layui-layer-min::before {
+  background-color: #212529;
 }
 .elem-style-nes .layui-card .layui-card-header {
   font-size: 18px;
@@ -1495,7 +1506,7 @@
   height: 27px !important;
   top: 1px;
 }
-.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > a {
+.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > span {
   height: 20px !important;
   line-height: 20px !important;
   background: linear-gradient(hsla(0, 0%, 100%, 0.3), hsla(0, 0%, 100%, 0.3) 45%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, hsla(0, 0%, 100%, 0.5)) !important;
@@ -1511,24 +1522,21 @@
   min-width: 26px;
   text-align: center;
 }
-.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > a::after {
-  position: relative;
-}
-.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > a:hover {
+.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > span:hover {
   background: radial-gradient(circle at 50% 100%, #2aceda, transparent 60%), linear-gradient(#a9d2e8 50%, #196c9b 0) !important;
 }
-.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > a:last-child {
+.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > span:last-child {
   border: 0;
   border-bottom-right-radius: 5px;
 }
-.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > a:first-child {
+.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > span:first-child {
   border-bottom-left-radius: 5px;
 }
-.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > a.layui-layer-close1 {
+.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > span.layui-layer-close1 {
   background-color: #d04a37 !important;
   min-width: 45px !important;
 }
-.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > a.layui-layer-close1:hover {
+.elem-style-win7 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > span.layui-layer-close1:hover {
   filter: contrast(1.3);
   background-image: linear-gradient(hsla(0, 0%, 100%, 0.3), hsla(0, 0%, 100%, 0.3) 45%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, hsla(0, 0%, 100%, 0.5)) !important;
 }
