--- a/public/static/common/css/theme/index.css
+++ b/public/static/common/css/theme/index.css
@@ -1216,6 +1216,19 @@
 .elem-style-gtk .layuimini-mobile-show .layui-nav-more {
   top: 4px;
 }
+.elem-style-gtk .layui-layer-easy .layui-layer-setwin > span {
+  color: #2e3436;
+}
+.elem-style-gtk .layui-layer-easy .layui-layer-setwin > span:after {
+  color: #2e3436;
+}
+.elem-style-gtk .layui-layer-easy .layui-layer-setwin .layui-layer-max::after,
+.elem-style-gtk .layui-layer-easy .layui-layer-setwin .layui-layer-max::before {
+  border-color: #2e3436;
+}
+.elem-style-gtk .layui-layer-easy .layui-layer-setwin .layui-layer-min::before {
+  background-color: #2e3436;
+}
 
 .elem-style-nes a,
 .elem-style-nes button {
