--- a/public/static/common/css/theme/index.css
+++ b/public/static/common/css/theme/index.css
@@ -270,6 +270,12 @@
   border-color: rgb(6, 216, 215) !important;
   background-color: rgb(2, 17, 20) !important;
 }
+.elem-style-sicfi .layuimini-container .layui-form-onswitch {
+  background-color: rgb(126, 252, 246) !important;
+}
+.elem-style-sicfi .layuimini-container .layui-form-switch.layui-form-onswitch i {
+  background-color: rgb(2, 17, 20) !important;
+}
 .elem-style-sicfi .layuimini-container .layui-laypage .layui-laypage-curr .layui-laypage-em {
   background-color: rgb(126, 252, 246) !important;
 }
@@ -538,10 +544,6 @@
 .elem-style-sicfi .layui-layer-easy .layui-layer-title {
   background-color: rgb(0, 125, 124) !important;
   color: rgb(126, 252, 246) !important;
-}
-.elem-style-sicfi .tableSelect {
-  background-color: rgb(2, 17, 20) !important;
-  border-color: rgb(6, 216, 215) !important;
 }
 .elem-style-sicfi .layui-table td,
 .elem-style-sicfi .layui-table th,
