--- a/public/static/common/css/theme/index.css
+++ b/public/static/common/css/theme/index.css
@@ -2153,10 +2153,10 @@
 .elem-style-neomorphic .layui-form-checked > div {
   color: #16b777;
 }
-.elem-style-neomorphic .layui-form-checkbox[lay-skin=primary] {
+.elem-style-neomorphic .layui-tree .layui-form-checkbox[lay-skin=primary] {
   padding: 13px;
 }
-.elem-style-neomorphic .layui-form-checkbox[lay-skin=primary] > i {
+.elem-style-neomorphic .layui-tree .layui-form-checkbox[lay-skin=primary] > i {
   left: 5px;
   top: 5px;
 }
