优化皮肤细节

--- a/public/static/common/css/theme/_neomorphic.scss
+++ b/public/static/common/css/theme/_neomorphic.scss
@@ -277,3 +277,11 @@ $main-color:#61677C;
     text-shadow: 0.5px 0.5px 0 #fff;
 
 }
+
+.layuimini-tab .layui-tab-title {
+    background-color: transparent;
+}
+
+.layuimini-tab .layui-tab-control>li {
+    background-color: transparent;
+}
