--- a/public/static/common/css/theme/_neomorphic.scss
+++ b/public/static/common/css/theme/_neomorphic.scss
@@ -246,7 +246,8 @@ $main-color:#61677C;
     color: #16b777;
 }
 
-.layui-tree {
+.layui-tree,
+.laytable-cell-checkbox {
 
     .layui-form-checkbox[lay-skin="primary"] {
         padding: 13px;
